samples/kubernetes/envoy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-envoy
  namespace: kanary
spec:
  selector:
    app: envoy
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy
  namespace: kanary
data:
  envoy.json: |
    {
      "admin":{
        "access_log_path":"/tmp/admin_access_log",
        "address":"tcp://127.0.0.1:8001"
      },
      "cluster_manager":{
        "clusters":[
          {
            "connect_timeout_ms":1000,
            "hosts":[
              {
                "url":"tcp://app-v1:8080"
              }
            ],
            "lb_type":"round_robin",
            "name":"app-v1",
            "type":"strict_dns"
          },
          {
            "connect_timeout_ms":1000,
            "hosts":[
              {
                "url":"tcp://app-v2:8080"
              }
            ],
            "lb_type":"round_robin",
            "name":"app-v2",
            "type":"strict_dns"
          },
          {
            "connect_timeout_ms":1000,
            "hosts":[
              {
                "url":"tcp://auth:80"
              }
            ],
            "lb_type":"round_robin",
            "name":"ext_auth",
            "type":"strict_dns"
          },
          {
            "connect_timeout_ms":1000,
            "hosts":[
              {
                "url":"tcp://auth:80"
              }
            ],
            "lb_type":"round_robin",
            "name":"fallback",
            "type":"strict_dns"
          }
        ]
      },
      "listeners":[
        {
          "address":"tcp://0.0.0.0:80",
          "filters":[
            {
              "name":"http_connection_manager",
              "type":"read",
              "config":{
                "access_log":[
                  {
                    "path":"/tmp/access_log"
                  }
                ],
                "codec_type":"auto",
                "filters":[
                  {
                    "name":"extauth",
                    "type":"decoder",
                    "config":{
                      "cluster":"ext_auth",
                      "timeout_ms":3000
                    }
                  },
                  {
                    "config":{

                    },
                    "name":"router",
                    "type":"decoder"
                  }
                ],
                "route_config":{
                  "virtual_hosts":[
                    {
                      "name":"backend",
                      "domains":[
                        "*"
                      ],
                      "routes":[
                        {
                          "prefix":"/",
                          "prefix_rewrite":"/",
                          "weighted_clusters":{
                            "clusters":[
                              {
                                "name":"app-v1",
                                "weight":20
                              },
                              {
                                "name":"app-v2",
                                "weight":20
                              }
                            ]
                          }
                        },
                        {
                          "prefix":"/",
                          "cluster":"fallback"
                        }
                      ]
                    }
                  ]
                },
                "stat_prefix":"ingress_http"
              }
            }
          ]
        }
      ],
      "stats_flush_interval_ms":1000,
      "statsd_local_udp_port":9125
    }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-kanary
  namespace: kanary
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      volumes:
      - name: envoy-cfg
        configMap:
          name: envoy
      containers:
      - name: envoy
        image: envoyproxy/envoy:latest
        command: ["envoy"]
        args: ["-c", "/etc/envoy/envoy.json", "--v2-config-only"]
        ports:
        - containerPort: 80
        - containerPort: 8001
        volumeMounts:
        - name: envoy-cfg
          mountPath:  /etc/envoy
